--- a/app.json
+++ b/app.json
@@ -1,16 +1,9 @@
 {
-  "name": "hello-heroku",
-  "scripts": {},
-  "env": {},
-  "formation": {
-    "web": {
-      "quantity": 1
+  "environments": {
+    "test": {
+      "scripts": {
+        "test": "nose test"
+      }
     }
-  },
-  "addons": [],
-  "buildpacks": [
-    {
-      "url": "heroku/python"
-    }
-  ]
+  }
 }
