--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "environments": {
     "test": {
-      "scripts": {
-        "test": "nose test"
-      }
+      "addons": [
+      
+      ]
     }
   }
 }
